  'set log cplex.log' in Cplex can now be read
- modified probing presolver to do multiple cycles if called in subsequent runs
- greatly improved performance of LP file reader by replacing string copies with pointer copies
- changed sort algorithm in probing presolver
- added flow cover separator

parameters:
- new parameter "separating/clique/backtrackfreq" to speed up clique cut separation in heuristic fashion
- new parameters "separating/*/maxbounddist" to have individual maxbounddist parameters per separator
- changed default value of global "separating/maxbounddist" to 1.0
- new parameter "separating/redcost/continuous"
- new parameter "heuristics/feaspump/maxstallloops"
- priority parameters are now restricted to be in [INT_MIN/4,INT_MAX/4] to avoid overflow errors in comparison methods
- new parameter "presolving/immrestartfac"
- changed default value of "numerics/boundstreps" to 0.05 in order to avoid very long propagation loops on continuous variables
- new parameter "nodeselection/childsel" to control the child selection
- new parameters "heuristics/*diving/backtrack" to activate 1-level backtracking for most of the diving heuristics
- increased priority of "estimate" node selector, such that this is the new default node selector
- changed default value of "separating/objparalfac" to 0.01 for performance reasons
- changed default values of "heuristics/*diving/backtrack to TRUE
- changed default value of "nodeselection/restartdfs/stdpriority" to 10000
- changed meaning of parameter setting "nodeselection/childsel = l"; old meaning is now called 'r'
- changed default value of "presolving/restartfac" to 0.05
- changed default value of "presolving/restartminred" to 0.10

features:
- presolving, cut separation, primal heuristics, and strong branching now better respect time limit
- time limit is now forwarded to lp solving algorithm
- added option to write node LP and MIP relaxations to LP file from interactive shell
- modified cut selection code